fixed a bug in amazon repository class

--- a/src/main/webapp/views/main.html
+++ b/src/main/webapp/views/main.html
@@ -4,8 +4,8 @@
 
         </div>
         <div class="col-md-8">
-            <h1 translate="main.title">Welcome, Java Hipster!</h1>
-            <p class="lead" translate="main.subtitle">This is your homepage</p>
+            <h1 translate="main.title">Welcome to MIAAS!</h1>
+
 
             <div ng-switch="authenticated">
                 <div class="alert alert-success" ng-switch-when="true"
