--- a/src/main/webapp/views/account.html
+++ b/src/main/webapp/views/account.html
@@ -30,7 +30,7 @@
         text-align: center;
     }
     .wrapper {
-        width: 80%;
+        width: 100%;
         padding: 30px 0;
     }
     .container1 {
@@ -173,8 +173,7 @@
                         <div class="modal-dialog">
                             <div class="modal-content">
                                 <form name="form" role="form" novalidate
-                                      class="ng-scope ng-invalid ng-invalid-required ng-dirty ng-valid-minlength"
-                                      ng-submit="create()">
+                                      class="ng-scope ng-invalid ng-invalid-required ng-dirty ng-valid-minlength">
 
                                     <div class="modal-header">
                                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
@@ -187,10 +186,10 @@
                                             <div class="container1">
 
                                                 <div id="two-columns" class="grid-container" style="display:block;">
-                                                    <ul class="rig columns-2">
+                                                    <ul class="rig columns-3">
                                                         <li ng-repeat="device in requestDevices">
                                                             <img src="images/Nexus_5.png" />
-                                                            <h3>Nexus</h3>
+
                                                             <p>Device Name : {{device.deviceId}}</p>
                                                             <p>Device Memory : {{device.deviceMemory}}</p>
                                                             <p>Device Version : {{device.deviceVersion}}</p>
@@ -205,9 +204,6 @@
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="clear()">
                                             <span class="glyphicon glyphicon-ban-circle"></span> Cancel
-                                        </button>
-                                        <button type="submit" ng-disabled="form.$invalid" class="btn btn-primary">
-                                            <span class="glyphicon glyphicon-save"></span> Save
                                         </button>
                                     </div>
                                 </form>
