pricing done. added rest call for

--- a/src/main/webapp/views/account.html
+++ b/src/main/webapp/views/account.html
@@ -370,7 +370,7 @@
                             <td>{{request.requestStartDate}}</td>
                             <td>{{request.requestEndDate}}</td>
                             <td>{{request.resourceQuantity}}</td>
-                            <td>{{request.resourcePrice}}</td>
+                            <td>{{request.requestPrice}}</td>
                         </tr>
                         </tbody>
                     </table>
@@ -396,7 +396,7 @@
                             <td>{{request.requestStartDate}}</td>
                             <td>{{request.requestEndDate}}</td>
                             <td>{{request.resourceQuantity}}</td>
-                            <td>{{request.resourcePrice}}</td>
+                            <td>{{request.requestPrice}}</td>
                         </tr>
                         </tbody>
                     </table>
