--- a/src/main/webapp/views/networkprofile.html
+++ b/src/main/webapp/views/networkprofile.html
@@ -3,22 +3,14 @@
 
 <div>
     <h1 style="text-align: center;margin-bottom: 25px">Network Dashboard</h1>
-    <div class="container_12 amazoninstances">
-        <div on-finish-render="ngRepeatFinished" ng-repeat="ai in amazonInstance" class="grid_4 gauges">
-            <h2 style="text-align: center;margin-bottom: 15px">{{ai.instanceId}}</h2>
-            <div class="gauge" style="width:200px" id="{{ai.instanceId}}"></div>
+    <div class="amazoninstances">
+        <div on-finish-render="ngRepeatFinished" ng-repeat="ai in amazonInstance" class="gauges">
+            <div class="container_12 itemWrapper">
+                <h2 style="text-align: center;margin-bottom: 15px">{{ai.instanceid}}</h2>
+                <div class="gauge grid_4" data-cpuUtil="{{ai.cpuutilization}}" style="width:200px" id="cpu{{ai.instanceid}}"></div>
+                <div class="gaugeResrcs grid_4" data-avlblRescrc="{{ai.availableResources}}" style="width:200px" id="res{{ai.instanceid}}"></div>
+            </div>
         </div>
-        <!--<div class="grid_4">-->
-            <!--<h2 style="text-align: center;margin-bottom: 15px">Instance 2</h2>-->
-            <!--<div id="gauge2" class="200x160px"></div>-->
-        <!--</div>-->
-        <!--<div class="grid_4">-->
-            <!--<h2 style="text-align: center;margin-bottom: 15px">Instance 3</h2>-->
-            <!--<div id="gauge3" class="200x160px"></div>-->
-        <!--</div>-->
-        <!--<div class="grid_4">-->
-            <!--<h2 style="text-align: center;margin-bottom: 15px">Instance 4</h2>-->
-            <!--<div id="gauge4" class="200x160px"></div>-->
-        <!--</div>-->
+
     </div>
 </div>
