--- a/src/main/webapp/styles/main.css
+++ b/src/main/webapp/styles/main.css
@@ -112,3 +112,17 @@ ul#strength {
 .gaugeResrcs{
     float:left;
 }
+
+.billWrapper{
+    width: 100%;
+    height: 100%;
+}
+
+.amount{
+    float: left;
+}
+
+nvd3-pie-chart{
+    width:50%;
+    height: 400px;
+}
