--- a/src/main/webapp/styles/main.css
+++ b/src/main/webapp/styles/main.css
@@ -118,11 +118,12 @@ ul#strength {
     height: 100%;
 }
 
+.billStats{
+    width: 100%;
+    height: 100%;
+}
+
 .amount{
     float: left;
 }
 
-nvd3-pie-chart{
-    width:50%;
-    height: 400px;
-}
