--- a/src/main/webapp/styles/main.css
+++ b/src/main/webapp/styles/main.css
@@ -114,7 +114,6 @@ ul#strength {
 }
 
 .billWrapper{
-    width: 100%;
     height: 100%;
 }
 
@@ -128,3 +127,26 @@ ul#strength {
     width:100%;
 }
 
+.totalAmt{
+    border-bottom: 1px solid #e3e3e3;
+}
+
+.apiPie svg, .memPie svg {
+    text-align: center;
+    margin: auto;
+    height: 300px;
+}
+
+.apiPie, .memPie {
+    border-radius: 10px;
+    border: 1px solid #e3e3e3;
+    margin-bottom: 20px;
+}
+
+.apiPie h3, .memPie h3{
+    border-bottom: 1px solid #e3e3e3;
+}
+
+#billing{
+    margin : auto;
+}
