--- a/src/main/webapp/views/networkprofile.html
+++ b/src/main/webapp/views/networkprofile.html
@@ -1,14 +1,35 @@
+<div class="row">
+    <ul class="nav nav-tabs" role="tablist" id="myTab">
+        <li role="presentation" class="active"><a data-target="#ec2" href="" role="tab"
+                                                  data-toggle="tab">Request</a></li>
+        <li role="presentation"><a data-target="#requestStats" href="" role="tab" data-toggle="tab">Request Stats</a></li>
+    </ul>
+    <div class="tab-content">
+        <div role="tabpanel" class="tab-pane active" id="ec2">
+            <div>
+                <h1 style="text-align: center;margin-bottom: 25px">Network Dashboard</h1>
 
-<div>
-    <h1 style="text-align: center;margin-bottom: 25px">Network Dashboard</h1>
-    <div class="amazoninstances">
-        <div on-finish-render="ngRepeatFinished" ng-repeat="ai in amazonInstance" class="gauges">
-            <div class="container_12 itemWrapper">
-                <h2 style="text-align: center;margin-bottom: 15px">{{ai.instanceid}}</h2>
-                <div class="gauge grid_4" data-cpuUtil="{{ai.cpuutilization}}" style="width:200px" id="cpu{{ai.instanceid}}"></div>
-                <div class="gaugeResrcs grid_4" data-avlblRescrc="{{ai.availableResources}}" style="width:200px" id="res{{ai.instanceid}}"></div>
+                <div class="amazoninstances">
+                    <div on-finish-render="ngRepeatFinished" ng-repeat="ai in amazonInstance" class="gauges">
+                        <div class="container_12 itemWrapper">
+                            <h2 style="text-align: center;margin-bottom: 15px">{{ai.instanceid}}</h2>
+
+                            <div class="gauge grid_4" data-cpuUtil="{{ai.cpuutilization}}" style="width:200px"
+                                 id="cpu{{ai.instanceid}}"></div>
+                            <div class="gaugeResrcs grid_4" data-avlblRescrc="{{ai.availableResources}}"
+                                 style="width:200px"
+                                 id="res{{ai.instanceid}}"></div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-
     </div>
+
+    <div class="tab-content">
+        <div role="tabpanel" class="tab-pane" id="requestStats">
+        </div>
+    </div>
+
+
 </div>
