line chart network admin
Priority based request processing visualization

--- a/src/main/webapp/views/networkprofile.html
+++ b/src/main/webapp/views/networkprofile.html
@@ -64,6 +64,19 @@
                     </div>
 
                 </div>
+                <div class="lineChart">
+                    <nvd3-line-chart
+                            data="reqData"
+                            id="toolTipExample"
+                            width="850"
+                            height="350"
+                            xAxisTickFormat="xAxisTickFormat()"
+                            showXAxis="true"
+                            showYAxis="true"
+                            interactive="true">
+                        <svg></svg>
+                    </nvd3-line-chart>
+                </div>
             </div>
         </div>
     </div>
