--- a/src/main/webapp/views/account.html
+++ b/src/main/webapp/views/account.html
@@ -32,7 +32,7 @@
                 <div class="modal-body">
 
                     <div class="form-group">
-                        <label>Resource Version</label>
+                        <label>Request Device</label>
                         <select class="form-control" ng-model="request.requestType"
                                 ng-options="obj.value as obj.text for obj in preDefRequestType">
                         </select>
