--- a/src/main/webapp/views/account.html
+++ b/src/main/webapp/views/account.html
@@ -236,12 +236,16 @@
 
 <div role="tabpanel" class="tab-pane container-fluid" id="devices">
     <div class="table-responsive">
-        <table class="table table-striped">
+        <table class="table table-striped devices">
             <thead>
             <tr>
                 <th>Type</th>
+                <th>Manufacturer</th>
                 <th>API Version</th>
                 <th>Memory</th>
+                <th>GPRS</th>
+                <th>Wi-Fi</th>
+                <th>Sensors</th>
                 <th>Status</th>
                 <th>Toggle</th>
             </tr>
@@ -249,8 +253,12 @@
             <tbody>
             <tr ng-repeat="request in activeDevices">
                 <td>{{request.deviceType}}</td>
+                <td >{{request.manufacturer}}</td>
                 <td>{{request.deviceVersion}}</td>
                 <td>{{request.deviceMemory}}</td>
+                <td>{{request.gprs}}</td>
+                <td>{{request.wifi}}</td>
+                <td class="sensors">{{request.sensors}}</td>
                 <td ng-if="request.deviceStatus == 'running'"><div class="led-green"></div></td>
                 <td ng-if="request.deviceStatus == 'stopped'"><div class="led-red"></div></td>
                 <td ng-if="request.deviceStatus == 'starting'"><div class="led-yellow"></div></td>
